# pysoem

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  cpysoem.pxd  pyproject.toml  pysoem.pyx  setup.py
.github/workflows/: build.yml  manual_triggerd_build_and_upload_to_test_pypi.yml  push_triggered_build.yml  release_triggerd_build_and_upload_to_pypi.yml
docs/: developer_notes.rst  requirements.txt
docs/source/: basics.rst  cdef_slave.rst  coe_objects.rst  conf.py  exceptions.rst  helpers.rst  index.rst  installation.rst  master.rst  process_data.rst  requirements.rst
example/: basic_example.py  find_adapters.py  minimal_example.py  read_eeprom.py
examples/: basic_example.py  eoe_example.py  firmware_update.py  minimal_example.py  no_gil_deom.py  read_eeprom.py  read_sdo_info.py  write_foe.py
osal/linux/: osal.c
osal/win32/: osal.c
oshw/linux/: nicdrv.c
oshw/macosx/: nicdrv.c
oshw/win32/: nicdrv.c
pysoem/: __init__.py  cpysoem.pxd  pysoem.pyx
src/pysoem/: __init__.py  cpysoem.pxd  pysoem.pyx
src/soem/: soem_config.c  soem_config.h
tests/: conftest.py  pysoem_basic_test.py  pysoem_coe_test.py  pysoem_foe_test.py  pysoem_pdo_test.py  pysoem_register_test.py  pysoem_test.py  tox_local.ini  tox_pypi.ini  tox_test_pypi.ini
