[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Skip building on CPython 3.6 on all platforms - because 3.6 it is causing issues.
skip = "cp36-*"

# Limit the created wheels for windows to AMD64.
[tool.cibuildwheel.windows]
archs = ["AMD64"]